added more features
hopefully added multiple screen resolution fixes

along with hopefully fixing the present page not showing all the content :D

--- a/present/beehive.html
+++ b/present/beehive.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="glitch-title">
-        <h1>Project Title</h1>
+        <h1 data-text="Beehive">Beehive</h1>
     </div>
 
     <div class="project-description">
