--- a/present.html
+++ b/present.html
@@ -26,14 +26,19 @@
         </div>
     </div>
 
+
     <div class="content">
         <h1>Projects Overview</h1>
-        <div class="project-file">
-            <a href="present/beehive.html" class="big">
-                <div>
-                    Beehive
-                </div>
-            </a>
+        <div class="projects-overview">
+            <div class="project-file">
+                <a href="present/beehive.html" class="big">Beehive</a>
+            </div>
+            <div class="project-file">
+                <a href="NA/NOT.html" class="big">Soom(tm)</a>
+            </div>
+            <div class="project-file">
+                <a href="NA/NOT.html" class="big">Soon(tm)</a>
+            </div>
         </div>
     </div>
     
